--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   </div>
                 </div>
                 <div class="streetimg">
-                    <img src="./images/Street.png" alt="strimg">
+                    <img class="strimg1" src="./images/Street.png" alt="strimg">
                   </div>
                <div class="cardfooter">
                     <div>
@@ -81,7 +81,7 @@
                   </div>
                 </div>
                   <div class="brimg">
-                    <img src="./images/breadslicing.png" alt="strimg">
+                    <img class="brdimg2" src="./images/breadslicing.png" alt="strimg">
                   </div>
                 </div>
                <div class="cardfooter">
@@ -100,7 +100,7 @@
                 <div class="prtdiv">
 
                     <div class="prtimg">
-                        <img src="./images/portrait.png" alt="strimg">
+                        <img class="prtimg3" src="./images/portrait.png" alt="strimg">
                     </div>
 
                 <div class="prtcont">
@@ -144,7 +144,7 @@
                     <p>EUROPEANA</p>
                    </div>
                    <div class="vpimg">
-                    <img src="./images/vintagepaint.png" alt="strimg">
+                    <img class="vpimg4" src="./images/vintagepaint.png" alt="strimg">
                     </div>
                 </div>
             
