--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="#">  <div class="navitems">
                     <p>Events</p>
                 </div> </a>
+                <a class="navmenu" href="#">  <div class="navitems">
+                  <p>Menu</p>
+              </div> </a>
             </div>
             <div class="rightnav">
                 <a href="#">  <div class="navitems">
