--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
                 <a href="#">  <div class="navitems">
                     <p>Events</p>
                 </div> </a>
-                <a class="navmenu" href="#">  <div class="navitems">
-                  <p>Menu</p>
-              </div> </a>
             </div>
             <div class="rightnav">
                 <a href="#">  <div class="navitems">
                     <p>Contact Now</p>
                 </div> </a>
             </div>
+         
+            <div class="navitems companyname cp1">
+              <p>Museo Sans</p>  
+             </div>
+
+             <a class="navmenu" href="#">  <div class="navitems">
+              <p>Menu</p>
+          </div> </a>
             </nav>
           </header>
 
