--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="museo,museums,website concepts,museo website,museum website">
         <meta name="authors" content="Kiran Sai">
         <meta name="viewport" content="width=device-width,intial-scale=1.0">
+        <meta name="google-site-verification" content="vWK-mQVncD7X9wshm5PEuGrH3h1xXK6WeiGdYDJyick" />
         <title>Museo - Website Concept</title>
         <link rel="stylesheet" href="style.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
